home and about pages updated

--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
 			<div class="colorlib-footer">
 				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				<ul>
-					<li><a href="https://www.facebook.com/tarkanbatar61"><i class="icon-facebook"></i></a></li>
-					<li><a href="https://www.twitter.com/tarkanbatar"><i class="icon-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/tarkanbatar"><i class="icon-linkedin"></i></a></li>
-                    <li><a href="https://www.github.com/tarkanbatar"><i class="icon-github"></i></a></li>
+					<li><a href="https://www.facebook.com/tarkanbatar61" target="_blank"><i class="icon-facebook"></i></a></li>
+					<li><a href="https://www.twitter.com/tarkanbatar" target="_blank"><i class="icon-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/tarkanbatar" target="_blank"><i class="icon-linkedin"></i></a></li>
+                    <li><a href="https://www.github.com/tarkanbatar" target="_blank"><i class="icon-github"></i></a></li>
 				</ul>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
@@ -63,16 +63,18 @@
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/tarkan.jpg);"></div>
 						<div class="desc">
-							<h2 class="subheading">Hello I'm</h2>
 							<h1 class="mb-4">Tarkan Batar</h1>
-							<p class="mb-4">BURAYA BİR ŞEYLER SIK - ALTTAKİ BUTONLAR YENİ TABDA AÇILSIN</p>
+							<p class="mb-4">I am a Computer Science and Engineering student at Marmara University. I am a passionate, determined and curious person who lives in Üsküdar/İstanbul/Turkey. Currently, I am trying to graduate from my department to reach my future career goals. </p>
+                            During my university time, I have too many opportunities to join different kinds of communities which are Marmara University Blockchain Club, IEEE Marmara, Marmara University Industrial Engineering Society, Marmara University Computer Science Society. I have worked for 1 year to Marmara University Blockchain Club as a vice president & project manager.
+                            <hr> So far I have used different technological tools in different technology areas. I was interested in robotics and Arduino in my freshman year and also I learned Java, C, Python, MS-SQL, R parallelly to my courses projects and homeworks.
+                             Additionally, I worked with Robot Framework with Selenium library during my internship time at GittiGidiyor.com as a DevOps and QA Test Engineer intern.
+
 							<ul class="ftco-social mt-3">
-                <li class="ftco-animate"><a href="https://www.twitter.com/tarkanbatar"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.facebook.com/tarkanbatar61"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.linkedin.com/in/tarkanbatar"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.github.com/tarkanbatar"><span class="icon-github"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.twitter.com/tarkanbatar" target="_blank"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/tarkanbatar61" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/tarkanbatar" target="_blank"><span class="icon-linkedin"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.github.com/tarkanbatar" target="_blank"><span class="icon-github"></span></a></li>
               </ul>
 						</div>
 					</div>
