--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 			<div class="colorlib-footer">
 				<p>
 				<ul>
-					<li><a href="https://www.twitter.com/tarkanbatar"><i class="icon-twitter"></i></a></li>
-					<li><a href="https://www.facebook.com/tarkanbatar61"><i class="icon-facebook"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/tarkanbatar"><i class="icon-linkedin"></i></a></li>
-					<li><a href="https://www.github.com/tarkanbatar"><i class="icon-github"></i></a></li>
+					<li><a href="https://www.twitter.com/tarkanbatar" target="_blank"><i class="icon-twitter"></i></a></li>
+					<li><a href="https://www.facebook.com/tarkanbatar61" target="_blank"><i class="icon-facebook"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/tarkanbatar" target="_blank"><i class="icon-linkedin"></i></a></li>
+					<li><a href="https://www.github.com/tarkanbatar" target="_blank"><i class="icon-github"></i></a></li>
 				</ul>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
@@ -70,13 +70,13 @@
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
 							<h1 class="mb-4">Tarkan Batar</h1>
-							<p class="mb-4">BURAYA KISA ÖZ BİR TİTLE YAZ</p>
+							<p class="mb-4">I am a Computer Science and Engineering student at Marmara University. I am a passionate, determined and curious person who lives in Üsküdar/İstanbul/Turkey. </p>
 							<p><a href="about.html" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 							<ul class="ftco-social mt-3">
-								<li class="ftco-animate"><a href="https://www.twitter.com/tarkanbatar"><span class="icon-twitter"></span></a></li>
-								<li class="ftco-animate"><a href="https://www.facebook.com/tarkanbatar61"><span class="icon-facebook"></span></a></li>
-								<li class="ftco-animate"><a href="https://www.linkedin.com/in/tarkanbatar"><span class="icon-linkedin"></span></a></li>
-								<li class="ftco-animate"><a href="https://www.github.com/tarkanbatar"><span class="icon-github"></span></a></li>
+								<li class="ftco-animate"><a href="https://www.twitter.com/tarkanbatar" target="_blank"><span class="icon-twitter" ></span> </a></li>
+								<li class="ftco-animate"><a href="https://www.facebook.com/tarkanbatar61" target="_blank"><span class="icon-facebook"></span></a></li>
+								<li class="ftco-animate"><a href="https://www.linkedin.com/in/tarkanbatar" target="_blank"><span class="icon-linkedin"></span></a></li>
+								<li class="ftco-animate"><a href="https://www.github.com/tarkanbatar" target="_blank"><span class="icon-github"></span></a></li>
 							</ul>
 						</div>
 					</div>
