about page completed

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
   <head>
     <title> Tarkan Batar</title>
     <meta charset="utf-8">
@@ -58,24 +58,20 @@
 				</ul>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
-		<div id="colorlib-main">
+		<div id="colorlib-main" onscroll="">
 			<div class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.7">
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
 						<div class="desc">
-							<h1 class="mb-4">Tarkan Batar</h1>
-							<p class="mb-4">I am a Computer Science and Engineering student at Marmara University. I am a passionate, determined and curious person who lives in Üsküdar/İstanbul/Turkey. Currently, I am trying to graduate from my department to reach my future career goals. </p>
-                            During my university time, I have too many opportunities to join different kinds of communities which are Marmara University Blockchain Club, IEEE Marmara, Marmara University Industrial Engineering Society, Marmara University Computer Science Society. I have worked for 1 year to Marmara University Blockchain Club as a vice president & project manager.
-                            <hr> So far I have used different technological tools in different technology areas. I was interested in robotics and Arduino in my freshman year and also I learned Java, C, Python, MS-SQL, R parallelly to my courses projects and homeworks.
+							<h3 class="mb-1"> Tarkan Batar </h3>
+                            <font size="1.5"   <p class="mb-1" > I am a Computer Science and Engineering student at Marmara University. I am a passionate, determined and curious person who lives in Üsküdar-İstanbul. Currently, I am trying to graduate from my department to reach my future career goals.
+                            <br>During my university period, I had many opportunities to join different kinds of communities which are Marmara University Blockchain Club, IEEE Marmara, Marmara University Industrial Engineering Society, Marmara University Computer Science Society. I have worked for 1 year to Marmara University Blockchain Club as a vice president & project manager.
+                            <br>So far I have used different technological tools in different technology areas. I was interested in robotics and Arduino in my freshman year and also I learned Java, C, Python, MS-SQL, R parallelly to my courses projects and homeworks.
                              Additionally, I worked with Robot Framework with Selenium library during my internship time at GittiGidiyor.com as a DevOps and QA Test Engineer intern.
+                            <hr size="0"> Outside of the Computer Science and university life, I have many hobbies like basketball, football, making music, playing electric guitar, camping, trekking, making social organization with friends and cooking. I am following Turkish and British football leagues for football, NBA for basketball very often. I spend my weekend nights with my electric guitar. I don't have a band tho, we can create a band with you if you interested :) . Also I am working on my cooking skills to improve, so I can not count myself as succesful at it but I'm developing I guess. I am kind of obsessive about systematic life style, it is including planned, restricted, detail oriented and compact life. Because of that I have very low tolerance to mess, dirt and unserious attitudes.
+                            </font> </p>
 
-							<ul class="ftco-social mt-3">
-                <li class="ftco-animate"><a href="https://www.twitter.com/tarkanbatar" target="_blank"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.facebook.com/tarkanbatar61" target="_blank"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.linkedin.com/in/tarkanbatar" target="_blank"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.github.com/tarkanbatar" target="_blank"><span class="icon-github"></span></a></li>
-              </ul>
 						</div>
 					</div>
 				</div>
