--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 		  gtag('config', 'UA-162175410-1');
 	  </script>
+	  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+	  <script>
+  		window.OneSignal = window.OneSignal || [];
+  		OneSignal.push(function() {
+    		OneSignal.init({
+      			appId: "ed77ba2f-bd90-4073-b852-abcd8d1c26b1",
+    			});
+  		});
+	 </script>
     <title> Tarkan Batar</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
