fix: information related stuff fixed

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<p><a href="about.html" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 							<ul class="ftco-social mt-3">
 								<li class="ftco-animate"><a href="https://www.twitter.com/tarkanbatar" target="_blank"><span class="icon-twitter" ></span> </a></li>
-								<li class="ftco-animate"><a href="https://www.facebook.com/tarkanbatar61" target="_blank"><span class="icon-facebook"></span></a></li>
+								<li class="ftco-animate"><a href="https://www.instagram.com/tarkanbatar" target="_blank"><span class="icon-instagram"></span></a></li>
 								<li class="ftco-animate"><a href="https://www.linkedin.com/in/tarkanbatar" target="_blank"><span class="icon-linkedin"></span></a></li>
 								<li class="ftco-animate"><a href="https://www.github.com/tarkanbatar" target="_blank"><span class="icon-github"></span></a></li>
 							</ul>
