fix: information related stuff fixed

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<div class="desc">
 							<h2 class="subheading">Hi! I'm</h2>
 							<h1 class="mb-4">Tarkan Batar</h1>
-							<p class="mb-4">I am a Computer Science and Engineering last year student at Marmara University. Basically, I can describe myself as a passionate, determined and curious person. Living in Üsküdar/İstanbul. </p>
+							<p class="mb-4">I am a Computer Science and Engineering last year student at Marmara University and Software Developer for incehesap.com / Oxyd Information Technologies Company. Basically, I can describe myself as a passionate, determined and curious person. Living in Üsküdar/İstanbul. </p>
 							<p><a href="about.html" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 							<ul class="ftco-social mt-3">
 								<li class="ftco-animate"><a href="https://www.twitter.com/tarkanbatar" target="_blank"><span class="icon-twitter" ></span> </a></li>
