--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
    			 	});
  			 });
 		</script>
+	  <script>
+	  OneSignal.push(function(){
+          	OneSignal.showHttpPrompt();
+
+       		OneSignal.getUserId().then(function(userId){
+            	console.log("OneSignal User ID:", userId);
+		});
+   	  });
+	  </script>
     <title> Tarkan Batar</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
