--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-            <h1 id="colorlib-logo"><a href="index.php">
+            <h1 id="colorlib-logo"><a href="index.html">
 
 
 
@@ -49,10 +49,10 @@
 
             </a></h1>			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.php">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="travel.html">Travel</a></li>
 					<li class="colorlib-active"><a href="about.html">About</a></li>
-					<li><a href="contact.php">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
