--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.php">Home</a></li>
-					<li><a href="travel.php">Travel</a></li>
+					<li><a href="travel.html">Travel</a></li>
 					<li><a href="about.php">About</a></li>
 					<li><a href="contact.php">Contact</a></li>
 				</ul>
