--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<?php
-    include 'db_connection.php';
-    include 'notification.php';
-
-    if(isset($_POST["action"]) &&  $_POST["action"]=="saveOneSignal"){
-        $userID = $_POST["userID"];
-        die($userID);
-       // checkUserId($userID);
-    }
-?>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -57,10 +46,10 @@
 			</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li class="colorlib-active"><a href="index.php">Home</a></li>
+					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="travel.html">Travel</a></li>
-					<li><a href="about.php">About</a></li>
-					<li><a href="contact.php">Contact</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
